<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_book_categories"
            android:icon="@drawable/ic_format_list_bulleted_black_24dp"
            android:title="@string/title_book_categories"/>

        <item
            android:id="@+id/menu_chart"
            android:icon="@drawable/ic_show_chart_white_24dp"
            android:title="@string/title_chart"/>

        <item
            android:id="@+id/menu_all_books"
            android:icon="@drawable/ic_dashboard_white_24dp"
            android:title="@string/title_all_books"/>
    </group>

    <item
        android:id="@+id/other"
        android:title="@string/title_group">
        <menu>
            <item
                android:id="@+id/settings"
                android:icon="@drawable/ic_build_white_24dp"
                android:title="@string/settings"/>
            <item
                android:id="@+id/write_to_developer"
                android:icon="@drawable/ic_chat_bubble_outline_white_24dp"
                android:title="@string/write_to_developer"/>
        </menu>
    </item>

</menu>
