<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/add_book_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/cardview_margin_bottom_add_book"
        android:layout_marginEnd="@dimen/cardview_margin_end_add_book"
        android:layout_marginStart="@dimen/cardview_margin_start_add_book"
        android:layout_marginTop="@dimen/cardview_margin_top_add_book"
        card_view:cardBackgroundColor="@android:color/white"
        card_view:cardCornerRadius="@dimen/corner_radius"
        card_view:cardElevation="@dimen/card_elevation"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:id="@+id/linear_layout_add_book"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/linear_layout_margin_bottom_add_book"
            android:layout_marginEnd="@dimen/linear_layout_margin_end_add_book"
            android:layout_marginStart="@dimen/linear_layout_margin_start_add_book"
            android:layout_marginTop="@dimen/linear_layout_margin_top_add_book"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/book_name_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/book_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_book_name"
                    android:inputType="textMultiLine"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/book_author_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_input_layout_margin_top">

                <EditText
                    android:id="@+id/book_author"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_book_author"
                    android:inputType="textMultiLine"/>

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/spinner_rating_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/text_input_layout_margin_bottom"
                android:layout_marginTop="@dimen/text_input_layout_margin_top"
                android:text="@string/hint_spinner_rating"/>

            <Spinner
                android:id="@+id/rating_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <View
                android:id="@+id/spinner_rating_divider"
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_add_book"
                android:layout_marginTop="@dimen/divider_add_book_margin_top"
                android:background="@android:color/black"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/book_page_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_input_layout_margin_top">

                <EditText
                    android:id="@+id/book_page"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_book_page"
                    android:inputType="number"/>

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/spinner_category_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/text_input_layout_margin_bottom"
                android:layout_marginTop="@dimen/text_input_layout_margin_top"
                android:text="@string/hint_spinner_category"/>

            <Spinner
                android:id="@+id/category_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <View
                android:id="@+id/category_spinner_divider"
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_add_book"
                android:layout_marginTop="@dimen/divider_add_book_margin_top"
                android:background="@android:color/black"/>

            <TextView
                android:id="@+id/spinner_type_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/text_input_layout_margin_bottom"
                android:layout_marginTop="@dimen/text_input_layout_margin_top"
                android:text="@string/hint_spinner_type"/>

            <Spinner
                android:id="@+id/type_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <View
                android:id="@+id/type_spinner_divider"
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_add_book"
                android:layout_marginTop="@dimen/divider_add_book_margin_top"
                android:background="@android:color/black"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/date_start_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_input_layout_margin_top">

                <EditText
                    android:id="@+id/date_start"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_date_start"
                    android:inputType="date"
                    android:focusable="false"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/date_end_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_input_layout_margin_top">

                <EditText
                    android:id="@+id/date_end"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_date_end"
                    android:inputType="date"
                    android:focusable="false"/>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</ScrollView>

