<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/chart_current_category_title"
        android:textColor="@color/chart_title_color"
        android:textSize="@dimen/chart_title_text_size"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="@dimen/chart_year_spinner_margin_right"
            android:orientation="vertical">

            <TextView
                android:id="@+id/chart_year_spinner_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="@dimen/chart_title_margin_top"
                android:text="@string/chart_year_spinner_hint"
                android:textSize="@dimen/chart_year_spinner_hint_text_size"/>

            <Spinner
                android:id="@+id/year_spinner_current_category"
                android:layout_width="@dimen/chart_year_spinner_width"
                android:layout_height="wrap_content"/>

            <View
                android:layout_width="@dimen/chart_year_spinner_width"
                android:layout_height="@dimen/year_divider"
                android:background="@android:color/black"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/chart_category_spinner_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="@dimen/chart_title_margin_top"
                android:text="@string/chart_category_spinner_hint"
                android:textSize="@dimen/chart_year_spinner_hint_text_size"/>

            <Spinner
                android:id="@+id/category_spinner"
                android:layout_width="@dimen/chart_year_spinner_width"
                android:layout_height="wrap_content"/>

            <View
                android:layout_width="@dimen/chart_year_spinner_width"
                android:layout_height="@dimen/year_divider"
                android:background="@android:color/black"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/x_axis_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/chart_x_axis_all_books_margin_top"
            android:text="@string/chart_all_books_x_axis_name"
            android:textSize="@dimen/chart_x_axis_all_books_text_size"/>

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/lineChart_books_current_category"
            android:layout_width="@dimen/chart_width"
            android:layout_height="@dimen/chart_height"
            android:layout_gravity="center_horizontal"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/chart_y_axis_all_books_margin_top"
            android:orientation="vertical">

            <TextView
                android:id="@+id/chart_month_spinner_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/chart_month_spinner_hint"
                android:textSize="@dimen/chart_year_spinner_hint_text_size"/>

            <Spinner
                android:id="@+id/month_division_spinner_current_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"/>

            <View
                android:layout_width="@dimen/chart_year_spinner_width"
                android:layout_height="@dimen/year_divider"
                android:layout_marginBottom="@dimen/chart_margin_bottom"
                android:background="@android:color/black"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>